<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/paging_input_search"
            android:layout_margin="@dimen/normal"
            android:layout_toStartOf="@+id/paging_btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/paging_btn_search"
            android:layout_marginTop="@dimen/normal"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paging_search" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/paging_list_fruit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_marginTop="75dp"
        android:layoutAnimation="@anim/layout_animation_fall_down"
        android:paddingBottom="80dp"
        tools:listitem="@layout/row_recycler_data" />

    <ProgressBar
        android:id="@+id/paging_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/normal" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/paging_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/normal"
        android:src="@drawable/ic_action_add" />

</android.support.design.widget.CoordinatorLayout>