<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dashboard_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
...
            app:itemTextColor="@color/selector_navigation_bottom"
            app:menu="@menu/menu_navigation_bottom" />

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/dashboard_navigation_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/layout_navigation_drawer_header"
        app:menu="@menu/menu_navigation_drawer" />
...
