...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/dashboard_recycler_label"
        style="@style/Button.Primary.Text_Normal_White.Two_Line"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
...
        android:layout_marginEnd="8dp"
        android:text="@string/go_to_basic_constraints"
        app:layout_constraintEnd_toStartOf="@+id/dashboard_recycler_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dashboard_paging_label"
        style="@style/Button.Primary.Text_Normal_White.Two_Line"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dashboard_paging"
...
